2005-12-02  Vincent Noel  <vincent.noel@gmail.com>

	* gnome-system-log.desktop.in: Add the Monitor category to
	.desktop file. Patch by Matthias Clasen. Fixes bug #322132.

2005-11-28  Guilherme de S. Pastore  <gpastore@gnome.org>

	* about.c (logview_about): fixed a typo in the author credits.

2005-11-23  Vincent Noel  <vincent.noel@gmail.com>

	* logrtns.c: (log_add_lines), (log_read_new_lines): Apparently you
	  can't compare a GnomeVFSFileSize with a GnomeVFSFileOffset.

2005-11-23  Vincent Noel  <vincent.noel@gmail.com>

	* logrtns.c: (log_stats_reload), (log_read_new_lines): Update the
	line count and last modification date when a log is updated.

2005-11-18  Vincent Noel  <vincent.noel@gmail.com>

	* calendar.c: (calendar_mark_dates), (log_find_day):
	* calendar.h:
	* log_repaint.c: (log_add_new_log_lines),
	(log_fill_model_with_date), (logview_set_log_model):
	* logrtns.c: (log_read_dates), (log_close):
	* logrtns.h:
	* logview.c: (logview_count_logs), (logview_save_prefs),
	(logview_add_log), (logview_find_log_from_name),
	(logview_close_log), (logview_file_selected_cb):
	* logview.h:
	* main.c: (save_session):
	* misc.c: (error_dialog_show), (error_dialog_show_queued): Convert
	a few double-linked lists in linked lists.

2005-11-18  Vincent Noel  <vincent.noel@gmail.com>

	* logview.c: (logview_set_window_title), (window_size_changed_cb),
	(logview_window_finalize), (logview_init), (logview_window_new):
	* main.c: (main):
	* userprefs.c: (prefs_load): Rename a few variables for consistency.

	* main.c (main): Better handle errors.
	
2005-11-18  Vincent Noel <vincent.noel@gmail.com>

	* logview.schemas.in: Updated the schemas to include new keys,
	  add default values.

2005-11-17  Vincent Noel <vincent.noel@gmail.com>

	* logrtns.c: (log_read_dates):
	* logview.c: (logview_add_logs_from_names):
	* userprefs.c: (prefs_load), (prefs_save): Handle the deletion of
	saved logs better.

2005-11-17  Vincent Noel  <vincent.noel@gmail.com>
