@@ -27,7 +27,7 @@
         <short>Size of the font used to display the log</short>
         <long>Specifies the size of the fixed-width font used
 		to display the log in the main tree view.
-		The default is taken from the default gnome terminal
+		The default is taken from the default terminal
 		font size.
        </long>
       </locale>
@@ -55,7 +55,7 @@
       <default>600</default>
       <locale name="C">
         <short>Width of the main window in pixels</short>
-        <long>Specifies the wifth of the log viewer main window
+        <long>Specifies the width of the log viewer main window
 	in pixels.
        </long>
       </locale>
@@ -70,8 +70,7 @@
       <locale name="C">
         <short>Log files to open up on startup</short>
         <long>Specifies a list of log files to open up at startup.
-	When this key is created, a default list is created by reading
-	/etc/syslog.conf.
+	A default list is created by reading /etc/syslog.conf.
        </long>
       </locale>
       </schema>
